--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
-  "name": "csis4495",
+  "name": "frontamo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.3",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.14.2",
-    "@mui/x-date-pickers": "^6.10.2",
-    "@reduxjs/toolkit": "^1.9.3",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@fontsource/roboto": "^5.0.12",
+    "@mui/icons-material": "^5.15.12",
+    "@mui/material": "^5.15.12",
+    "@mui/x-date-pickers": "^6.19.6",
+    "@reduxjs/toolkit": "^2.2.1",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
-    "axios": "^1.4.0",
-    "dayjs": "^1.11.9",
-    "gh-pages": "^5.0.0",
-    "mdb-react-ui-kit": "^6.1.0",
+    "axios": "^1.6.7",
+    "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-animated-progress-bar": "^1.1.2",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.4",
-    "react-redux": "^8.1.0",
-    "react-router": "^6.12.1",
-    "react-router-dom": "^6.12.1",
+    "react-redux": "^9.1.0",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.1",
+    "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2",
-    "sass": "^1.63.3",
+    "redux-thunk": "^3.1.0",
+    "sass": "^1.71.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
